--- a/Breast_Cancer_Wisconsin_with_threshold.ipynb
+++ b/Breast_Cancer_Wisconsin_with_threshold.ipynb
@@ -1156,6 +1156,7 @@
      "data": {
       "text/plain": [
        "LogisticRegression(C=0.1, max_iter=10000)"
+       "print('hello')
       ]
      },
      "execution_count": 54,
